--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "react-use": "^17.6.0",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.12",
     "yup": "^1.7.0"
   },
